--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -909,8 +909,8 @@ div.matchstick.puzzle-container div.display-container {
   position: relative;
 }
 div.matchstick.puzzle-container div.display-container canvas {
-  height: 90vw;
-  width: 90vw;
+  height: min(90vw, 80vh);
+  width: min(90vw, 80vh);
   border: solid 2px #9edfe5;
   border-radius: 3vw;
 }
@@ -922,8 +922,8 @@ div.matchstick.puzzle-container div.display-container svg.nav-button.reset {
   cursor: pointer;
   user-select: none;
   position: absolute;
-  top: 5vw;
-  left: 5vw;
+  top: min(5vw, 5vh);
+  left: min(5vw, 5vh);
   height: 2.5em;
   width: 2.5em;
   z-index: 1;
@@ -945,8 +945,8 @@ div.matchstick.puzzle-container div.display-container svg.nav-button.reset[isact
 }
 div.matchstick.puzzle-container div.display-container div.saving-indicator {
   position: absolute;
-  right: 5vw;
-  bottom: 5vw;
+  right: min(5vw, 5vh);
+  bottom: min(5vw, 5vh);
   color: #888;
   z-index: -1;
 }
